# pydantic-ai-temporal-example

./: .gitignore  CLAUDE.md  pyproject.toml
architecture/: README.md
architecture/diagrams/: 02_architecture_diagrams.md
architecture/docs/: 01_component_inventory.md  03_data_flows.md  04_api_reference.md
